--- a/package.json
+++ b/package.json
@@ -35,8 +35,7 @@
   },
   "scripts": {
     "install-all": "cd serverside && npm install && cd ../frontend && npm install",
-    "start": "concurrently \"npm start --prefix serverside\" \"npm start --prefix frontend\"",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "concurrently \"npm start --prefix serverside\" \"npm start --prefix frontend\""
   },
   "repository": {
     "type": "git",
